package com.example.mathewcop3330assignment4;

import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.Label;

import java.nio.Buffer;

public class Controller {


    @FXML
    public void handlecase(){
        System.out.println("Hello");
    }
}