package com.example.mathewcop3330assignment4;

public class Item {
    /*
    private String description
    //holds description of the item
    private boolean complete
    //indicates that task is completed with true value
    private int date[3];
    //holds integers for {day, month, year}

    Item(){
        set description = "No Description"
        set to uncomplete complete = false
        set date to 0-0-0000 or date = {0,0,0}
    }
    Item(String description, String date){
        passes to next constructor with added parameter of false
        Item(description, date, false)
    }
    item(String description, String date, boolean complete){
        call setDescription of description
        call setDate of date
        this class's complete = complete
    }

    private boolean validateDate(String date){
        checks if date is in format mm-dd-yyyy
        also that values of each are within expected values
    }
    private boolean validateDescription(String description){
        if length of description is greater than 0
            while character at current is a blank space and current is still inside description
                increase current
            if current is still inside the array then description is valid
            else return false
        else
            return false
    }
    setDescription(String description){
        if validateDescription(description) says it is valid
            set this class's description equal to description
        else
            set this class's description to "No Description"
    }
    String getDescription(){
        return description
    }
    toggleComplete(){
        flip truth value of complete from false to true or true to false
    }
    bool getComplete(){
        return complete
    }
    private String formatDate(){
        return concatenated string of integer at 1 then a dash then the one at 0 then dash then the one at 2
    }
    String getDate(){
        return formatDate of date
    }
    int getYear(){
        return date's third integer
    }
    int getMonth(){
        return date's second integer
    }
    int getDay(){
        return date's first integer
    }
    setDate(String date){
        if validateDate(date)
            read in integer from front into second integer of date
            skip 1 character
            read in integer into first
            skip 1 character
            read in integer into third
        else
            date is set to hold zeros
    }
    */
}
