package com.example.mathewcop3330assignment4;

public class TodoList {/*
    public ArrayList<item> List
    //will hold items for the list
    private int ListSize
    //keeps track of list size for certain operations
    private String title
    //holds name of todolist

    TodoList(){
        title = "No Title"
        set ListSize to 0
    }
    TodoList(String title){
        setTitle(title)
        set ListSize to 0
    }
    private boolean isEmpty(String title){
        if length of title is greater than 0
            while character at current is a blank space and current is still inside title
                increase current
            if current is still inside the array then title is valid
            else return false
        else
            return false
    }
    addItem(String description, String date, boolean complete){
        create object of Item with above parameters
        add the object to List
        increaseListSize()
    }
    removeItem(int index){
        if validateIndex confirms index being part of List
            remove item from list
            decreaseListSize()
    }
    private boolean validateIndex(int index){
        if int index > 0 and < length of array
            return true
        else
            return false
    }
    private increaseListSize(){
        increase ListSize by 1
    }
    private decreaseListSize(){
        decrease ListSize by 1
    }
    int getListSize(){
        return ListSize
    }
    setTitle(String title){
        if not isEmpty(title)
            this class's title = title
        else
            this class's title = "No Title"
    }
    String getTitle(){
        return title
    }
*/
}
