@startuml
'https://plantuml.com/sequence-diagram
class Controller{
+public AllLists allList

+addTodoListResponse()
+addTodoListCancel()
+addTodoListDone()
+private clearAddTodoList()

+loadTodoListResponse()
+loadTodoListCancel()
+loadTodoListDone()
+private clearLoadTodoList()

+loadAllTodoList()
+loadAllTodoListCancel()
+loadAllTodoListDone()

+selectTodoListResponse()
+loadTodoListPage()
+addItemResponse()
+addItemResponseCancel()
+addItemResponseDone()
+clearAddItemResponse()
+RemoveItemResponse()
+RemoveItemResponseCancel()
+RemoveItemResponseDone()
+clearRemoveItemResponse()
+CompleteOnlyResponse()
+IncompleteOnlyResponse()
+EditDateResponse()
+EditDateCancel()

}
class Item{
+private String description
+private boolean complete
+private int date[3];
+Item()
+Item(String description, String date)
+item(String description, String date, boolean complete)
+private boolean validateDate(String date)
+private boolean validateDescription(String description)
+setDescription(String description)
+String getDescription()
+toggleComplete()
+bool getComplete()
+private String formatDate()
+String getDate()
+int getYear()
+int getMonth()
+int getDay()
+setDate(String date)
}

TodoList -- Item

class TodoList{
+public ArrayList<item> List
+private int ListSize
+private String title
+TodoList()
+TodoList(String title)
+private boolean ifEmpty(String title)
+addItem(String description, String date, boolean complete)
+removeItem(int index)
+private boolean validateIndex(int index)
+private increaseListSize()
+private decreaseListSize()
+int getListSize()
+setTitle(String title)
+getTitle()
}
AllLists -- TodoList
class AllLists{
+public ArrayList<TodoList> TLList;
+private TLListSize;
+AllLists()
+loadAll(Scanner inputReader)
+loadTodoList(Scanner inputReader)
+storeAll(FileWriter outWriter)
+storeTodoList(FileWriter outWriter, int index)
+add TodoList(String title)
+int getSize()
+private increaseTLListSize()
+private decreaseTLListSize()
+addTodoList(String title)
+removeTodoList(int (int index)
}
class OutputFile{
+public FileWriter outWriter
+private String fileName
+OutputFile()
+OutputFile(String fileName)
+private ifError(String fileName)
+private setOutWriter(fileName)
+String getFileName()
}
class InputFile{
+public Scanner inputReader
+private String fileName
+InputFile()
+InputFile(String fileName)
+private ifError(String fileName)
+private setInputReader(String fileName)
+String getFileName()
}
@enduml